# mkdocs-git-diff-highlighter

./: .gitignore  LICENSE  pyproject.toml
mkdocs_git_diff_highlighter/: plugin.py
mkdocs_git_diff_highlighter_plugin/: __init__.py  plugin.py
tests/: test_plugin.py
