[tool.poetry]
name = "mkdocs-git-diff-highlighter"
version = "0.1.0"
description = ""
authors = ["haradama <harada@sfc.wide.ad.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
